# WebJuanma

./: .gitignore  compose.env.example  docker-compose.yml  test_payload.json
.github/workflows/: build-and-push.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260505195945_create_contacts_table.sql
backend/src/: config.rs  db.rs  email.rs  main.rs  state.rs
backend/src/routes/: contact.rs  health.rs  mod.rs
deploy/: deploy.sh  ec2-setup.sh  nginx.conf
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/messages/: en.json  es.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/components/about/: AboutContent.module.css  AboutContent.tsx
frontend/src/components/contact/: ContactContent.module.css  ContactContent.tsx
frontend/src/components/home/: AboutPreview.module.css  AboutPreview.tsx  CTASection.module.css  CTASection.tsx  Hero.module.css  Hero.tsx  ServicesGrid.module.css  ServicesGrid.tsx  TechMarquee.module.css  TechMarquee.tsx
frontend/src/components/layout/: Footer.module.css  Footer.tsx  Navbar.module.css  Navbar.tsx
frontend/src/components/services/: ServicesContent.module.css  ServicesContent.tsx
frontend/src/components/ui/: GlowCard.module.css  GlowCard.tsx  SectionHeading.module.css  SectionHeading.tsx
frontend/src/i18n/: request.ts  routing.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/styles/: globals.css
logo/: descripcion_texto_colores.txt
(+3 files in other folders)
